--- a/Kalkulator/JS/index.html
+++ b/Kalkulator/JS/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="main-content">
-        <input type="text" id="display" disabled>
+        <input type="text" id="display">
         <section class="calc-row">
             <input type="button" value="1" onclick="addToDisplay('1')">
             <input type="button" value="2" onclick="addToDisplay('2')">
